# signal-lost

./: .gitignore  AGENTS.md  CLAUDE.md  GAMEPLAY.md  LOAD GAME.md  NEW GAME.md  README.md  RESUME.md  SAVE GAME.md  pyproject.toml
.claude/: launch.json  settings.json  settings.local.json
agent/: game.md  player.md  system.md
assets/characters/: _generate.py  manifest.json
assets/locations/: manifest.json
compiled/: claude_llm.py  game_data.py  graph.py  play_headless.py  prompts.py  run.py  state.py  tools.py
compiled/tui/: screens.py  tui_viewer.py
engine/: __init__.py  action_cache.py  claude_code_engine.py  companion.py  game_data.py  graph.py  llm_factory.py  opening_cache.py  prompts.py  reducer.py  state.py  suggestions.py  tools.py  world_sim_scheduler.py
game/: background.md  npcs.md  sessions.md
game_specification/world/: background.md  init.md  sessions.md
gui/: auth.py  run_gui.py  server.py
gui/static/: app.js  index.html  music.js  style.css
logs/: game_playthrough_log.md  game_review.md  playthrough.md
saves/111/: conversation.jsonl  inventory.json  knowledge.json  location.json  log.json  npcs.json  player.json  traces.json  world_state.json
saves/claude/: conversation.jsonl  inventory.json  (+10 more)
scripts/: download_music.py
session/: conversation.jsonl  knowledge.json  log.json  npcs.json  player.json  world_state.json
settings/: custom.json  default.json  pricing.json  provider.json
tests/: MODEL_SWEEP.md  README.md
tools/: cipher.py  dice.py  generate_graph.py  glitch.py  map.py  profile.py  signal.py
tui/: tui_viewer.py
(+144 files in other folders)
