[project]
name = "signal-lost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "langchain-core>=1.2.22",
    "pyte>=0.8.2",
    "rich>=14.3.3",
    "textual>=8.1.1",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[tool.uv.workspace]
members = [
    "compiled",
]
