[project]
name = "compiled"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "pyte>=0.8.2",
    "rich>=14.3.3",
    "textual>=8.1.1",
]
