[project]
name = "signal-lost"
version = "0.2.0"
description = "A cyberpunk knowledge-roguelike text RPG powered by LangGraph"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langsmith>=0.7.22",
    "rich>=14.3.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "websockets>=14.0",
]
